...
            (reverseButton.alpha = buttonOn)
    }
    func textFieldDidEndEditing(_ textField: UITextField) {
        lineUnderTextField.backgroundColor = .systemGray5
    }

    // MARK: - Perform reverse by button "Return"
    func textFieldShouldReturn(_ textField: UITextField) -> Bool {
        resultLabel.text = reversingWords.reverseWords(string: textInputField.text!)
        if !resultLabel.labelText.isEmpty {
            reverseButton.setTitle("Clear", for: .normal)
        }
        return true
...
