...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reverse Words" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizin
                                                <rect key="frame" x="16" y="64" width="382" height="44"/>
                                                <accessibility key="accessibilityConfiguration" identifier="LabelReverseWords"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="d0a-8A-eeu"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Text to reverse" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9UR-De-VhA">
                                                <rect key="frame" x="16" y="209.66666666666669" width="382" height="46"/>
                                                <accessibility key="accessibilityConfiguration" identifier="InputWords"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="46" id="Uw3-eh-ca7"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIn
                                                <rect key="frame" x="16" y="279.66666666666669" width="382" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ResultLabel">
                                                    <accessibilityTraits key="traits" staticText="YES"/>
                                                </accessibility>
...
                                                <rect key="frame" x="16" y="562.33333333333337" width="382" height="56"/>
                                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="CustomReverse"/>
                                                <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="17"/>
                                                <state key="normal" title="Custom Reverse">
...
                                                <rect key="frame" x="16" y="481" width="382" height="55.666666666666629"/>
                                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ReverseButton"/>
                                                <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="17"/>
                                                <state key="normal" title="Reverse">
...
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="BigView"/>
                                        <constraints>
                                            <constraint firstItem="Tut-3I-kp2" firstAttribute="leading" secondItem="MLU-Rl-lPq" secondAttribute="leading" constant="16" id="3bL-H5-vwC"/>
...
