...
                                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.60000002384185791" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="748" text="This app will flip your words with exception characters. Please enter the text below" textAlignment="center" lineBreakMode="tailTruncation" numberOfLi
                                                <rect key="frame" x="16" y="124" width="382" height="45.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="LabelReverseWordsViewTwo"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="45.5" id="WgJ-Te-htl"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Text to reverse" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fae-4r-ADf">
                                                <rect key="frame" x="16" y="209.5" width="382" height="46"/>
                                                <accessibility key="accessibilityConfiguration" identifier="InputWords"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="46" id="pJP-2v-FMG"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to ignor" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tw9-MT-7Pz">
                                                <rect key="frame" x="16" y="442" width="382" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="FieldIgnorChar"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
...
                                                <segments>
                                                    <segment title="Default"/>
                                                    <segment title="Custom"/>
                                                    <segment title="Hardcore"/>
                                                </segments>
                                                <connections>
...
                                                <rect key="frame" x="16" y="562.5" width="382" height="56"/>
                                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ResultButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="56" id="L4v-a0-4eY"/>
...
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="BigViewTwo"/>
                                        <constraints>
                                            <constraint firstItem="jEn-e2-jev" firstAttribute="leading" secondItem="Kcd-TR-4wm" secondAttribute="leading" constant="16" id="3r4-xb-mRk"/>
...
